Add consultation client and server modules
Introduces a new client application for consultation management, including UI components for login, consultation creation/editing, and patient management. Adds server-side modules for handling client connections, protocol requests, and database operations for consultations and patients. Updates database configuration to support runtime overrides and enhances DAO methods for richer consultation data retrieval.